--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,9 @@
       href="{{ url_for('static', filename='css/style.css') }}"
       type="text/css"
     />
-    <title>Hello Flash</title>
+    <title>Hello Flask</title>
   </head>
   <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="{{ url_for('index') }}"
@@ -63,7 +62,7 @@
     <header
       class="masthead"
       style="
-        background-image: url('https://external-preview.redd.it/thorin-and-company-by-art-calavera-v0-QMvOxqHkiYpyhsyd_uOstkqKMkohCYubLXlhB6kDpAc.png?auto=webp&s=0b4840829c1859f1813492797192657e8fff4446');
+        background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png');
       "
     >
       <div class="overlay"></div>
@@ -72,7 +71,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Thorin &amp; Company</h1>
-              <span class="subheading">Thorin and his company of dwarfs</span>
+              <span class="subheading">Thorin and his company of dwarves</span>
             </div>
           </div>
         </div>
@@ -129,6 +128,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
+
     <script>
       $("#copyright").text(new Date().getFullYear());
     </script>
